# is-bot

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py  update.sh
.github/workflows/: ci.yml  periodic-update.yml
is_bot/: __init__.py  _is_bot.py  _patterns.py
tests/: test_is_bot.py
