[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'is-bot'
license = { file = 'LICENSE.txt' }
description = 'Python package to detect bots/crawlers/spiders via user-agent'
readme = 'README.md'
authors = [{ name = 'Roman Snegirev', email = 'snegiryev@gmail.com' }]
keywords = ['python', 'bots', 'crawlers', 'web-crawlers', 'user-agent', 'user-agent-parser']
requires-python = ">=3.8.0"
dependencies = ['regex>=2022.8.17']
dynamic = ['version']
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers",
]

[project.urls]
homepage = 'https://github.com/romis2012/is-bot'
repository = 'https://github.com/romis2012/is-bot'

[tool.setuptools.dynamic]
version = { attr = 'is_bot.__version__' }

[tool.setuptools.packages.find]
include = ['is_bot*']

[tool.black]
line-length = 89
target-version = ['py39', 'py310', 'py311', 'py312']
skip-string-normalization = true
verbose = true
